# basket-case

./: .gitignore  README.md  basket-case.cabal
app/: Main.hs
src/: Lib.hs  ProjectConfig.hs
src/BasketCase/: Account.hs  BasketCase.hs  CaseType.hs  Config.hs  Reader.hs  Schema.hs  Serializable.hs  Serialization.hs  Team.hs
