name:                basket-case
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/basket-case#readme
license:             BSD3
license-file:        LICENSE
author:              Armand Adroher
maintainer:          example@example.com
copyright:           2017 Armand Adroher
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     BasketCase.Config
  build-depends:       base >= 4.7 && < 5
                     , directory
                     , yaml
                     , bytestring
  default-language:    Haskell2010

executable basket-case-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , basket-case
  default-language:    Haskell2010

test-suite basket-case-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , basket-case
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/basket-case
